[workspace]
members = [
    "crates/butteraugli-gpu",
    "crates/zenhdr-corpus",
    "crates/cvvdp",
    "crates/cvvdp-conformance",
    "crates/cvvdp-gpu",
    "crates/dssim-gpu",
    "crates/iwssim",
    "crates/iwssim-gpu",
    "crates/ssim2-gpu",
    "crates/zenfleet-cloud",
    "crates/zenfleet-local",
    "crates/zenfleet-vastai",
    "crates/zenfleet-hetzner",
    "crates/zenfleet-core",
    "crates/zenfleet-ledger",
    "crates/zenfleet-dash",
    "crates/zenfleet-worker",
    "crates/zenfleet-ctl",
    "crates/zenfleet-sweep",
    "crates/zenmetrics-cli",
    "crates/zenmetrics-api",
    "crates/zenmetrics-corpus",
    "crates/zenmetrics-gpu-core",
    "crates/zenmetrics-orchestrator",
    "crates/zensim-gpu",
    "crates/zenstats",
    "benchmarks/heaptrack/drivers/cpu_profile",
    "benchmarks/heaptrack/drivers/gpu_vram_profile",
]
# Excluded: burn-conv-spike is a standalone perf-spike crate that
# pins cubecl 0.10.0 stable (cubek-convolution doesn't accept
# 0.10.0-pre.4). It has its own [workspace] root so it doesn't
# pull workspace settings either. burn-ranknet-spike is the
# training-framework counterpart (burn 0.21 autodiff + custom
# RankNet loss); also standalone, also kept out of the parent graph.
exclude = [
    "crates/burn-conv-spike",
    "crates/burn-ranknet-spike",
    # `apidoc/` is the CI-free public-API snapshot runner: excluded so plain
    # `cargo test` and every CI job never compile its dependency tree or run
    # rustdoc. Regenerate via `just api-doc`.
    "apidoc",
]
resolver = "2"

[workspace.package]
authors = ["Imazen <support@imazen.io>"]
homepage = "https://github.com/imazen/zenmetrics"
repository = "https://github.com/imazen/zenmetrics"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Workspace member crates (in-tree).
butteraugli-gpu = { version = "0.0.1", path = "crates/butteraugli-gpu", default-features = false }
cvvdp = { version = "0.1.0", path = "crates/cvvdp", default-features = false }
cvvdp-gpu = { version = "0.0.1", path = "crates/cvvdp-gpu", default-features = false }
dssim-gpu = { version = "0.0.1", path = "crates/dssim-gpu", default-features = false }
iwssim = { version = "0.1.0", path = "crates/iwssim", default-features = false }
iwssim-gpu = { version = "0.0.1", path = "crates/iwssim-gpu", default-features = false }
ssim2-gpu = { version = "0.0.1", path = "crates/ssim2-gpu", default-features = false }
zensim-gpu = { version = "0.0.1", path = "crates/zensim-gpu", default-features = false }
zenmetrics-api = { version = "0.0.1", path = "crates/zenmetrics-api", default-features = false }
zenmetrics-corpus = { version = "0.1.0", path = "crates/zenmetrics-corpus", default-features = false }
zenmetrics-orchestrator = { version = "0.0.1", path = "crates/zenmetrics-orchestrator", default-features = false }
zenfleet-cloud = { version = "0.0.1", path = "crates/zenfleet-cloud", default-features = false }
zenfleet-local = { version = "0.0.1", path = "crates/zenfleet-local", default-features = false }
zenfleet-vastai = { version = "0.0.1", path = "crates/zenfleet-vastai", default-features = false }
zenfleet-hetzner = { version = "0.0.1", path = "crates/zenfleet-hetzner", default-features = false }

# CubeCL — single source of truth for the GPU backend version.
#
# Phase 8f (2026-05-27): switched from `git = "lilith/cubecl"` rev pins
# to crates.io publication via the `imazen/zenforks-cubecl` rename.
#   - 11 renamed crates (zenforks-cubecl-*) at 0.10.1 ship pinned-upload
#     + PTX cache widening + Metal Atomic<f32> capability honesty patches.
#   - 5 non-renamed crates (cubecl-common, cubecl-ir, cubecl-macros,
#     cubecl-macros-internal, cubecl-zspace) come from upstream
#     tracel-ai/cubecl crates.io publication unchanged.
# The [lib] name = "cubecl_*" shim in each renamed crate keeps source
# code paths like `use cubecl_runtime::*` resolving without changes.
# See ../zenforks-cubecl-work/ZENFORKS_README.md for the full strategy.
cubecl         = { package = "zenforks-cubecl",         version = "0.10.1", default-features = false, features = ["std"] }
cubecl-runtime = { package = "zenforks-cubecl-runtime", version = "0.10.1", default-features = false }
cubecl-core    = { package = "zenforks-cubecl-core",    version = "0.10.1", default-features = false }
cubecl-cuda    = { package = "zenforks-cubecl-cuda",    version = "0.10.1", default-features = false }
cubecl-cpu     = { package = "zenforks-cubecl-cpu",     version = "0.10.2", default-features = false }
cubecl-wgpu    = { package = "zenforks-cubecl-wgpu",    version = "0.10.1", default-features = false }
cubecl-hip     = { package = "zenforks-cubecl-hip",     version = "0.10.1", default-features = false }
cubecl-cpp     = { package = "zenforks-cubecl-cpp",     version = "0.10.1", default-features = false }
# Non-renamed leaves stay on upstream's crates.io publication:
cubecl-common  = "0.10.0"
cubecl-ir      = "0.10.0"

# CPU reference crates used by parity tests.
butteraugli = { version = "0.9.4" }
# local dssim-core 3.5.0 (../../dssim/dssim-core, patched below) needs `threads` to compile —
# its no-threads path calls into_par_iter unconditionally (crates.io 3.4.0 built without it).
dssim-core = { version = "3.5", default-features = false, features = ["threads"] }
ssimulacra2 = { version = "0.5" }
zensim = { version = "0.3.0" }

# Common deps.
archmage = { version = "0.9.23", features = ["macros", "avx512"] }
magetypes = { version = "0.9.23", features = ["avx512"] }
bytemuck = "1"
clap = { version = "4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"] }
csv = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imgref = "1"
indicatif = "0.17"
rgb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Release profile — thin LTO + 16 codegen-units + line-tables-only debug.
#
# Why not `lto = "fat"` here:
#   - Fat LTO loads every CGU of every workspace member into a single
#     LLVM context during the final crate's link. With this workspace
#     (12 members, cubecl multi-backend, zenpixels, image codecs) plus
#     `debug = "full"` + `codegen-units = 1`, peak RSS during the
#     workspace-wide link routinely exceeded the 16 GB available on
#     `ubuntu-latest` GitHub runners. The CI workspace build was
#     gated off with `&& false` (ci.yml:55, since commit 4a729b65 on
#     2026-05-05) for exactly this reason.
#   - Thin LTO keeps ~85% of fat LTO's optimization wins (cross-CGU
#     inlining, dead-code elimination, devirtualization) but does the
#     work per-CGU rather than in one giant module, capping peak RSS.
#   - `debug = "line-tables-only"` instead of `"full"` keeps backtrace
#     line numbers (what `whereat` and panic reports need) without
#     dragging every DWARF DIE through the LTO link — that's the
#     other half of the OOM equation. Drop to `"none"` for even
#     smaller link memory if backtraces aren't needed.
#   - `codegen-units = 16` is the cargo default for release. With thin
#     LTO it lets LLVM parallelise the per-CGU optimisation passes.
#
# Need maximum optimisation for a shipping binary? Use `--profile
# release-fat` below. Benchmarks already opt into fat LTO via
# `[profile.bench]`.
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
split-debuginfo = "packed"
codegen-units = 16

# Fat-LTO release profile for production binaries on memory-rich
# hosts (the 7950X workstation, vast.ai builders). Same shape as the
# old `[profile.release]` minus `debug = "full"` (debug=full + fat LTO
# was the OOM trigger; full debuginfo on a release artefact is rarely
# what you actually want — split it out via `split-debuginfo` or use
# `--profile release-debug` if you really need it).
#
# Usage:
#   cargo build --profile release-fat -p zenmetrics-cli
#   cargo build --profile release-fat --workspace
[profile.release-fat]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

# Full-debuginfo release profile for `perf record` / heaptrack /
# callgrind sessions. Don't use this on CI runners — `debug = "full"`
# is what made the workspace-wide release link OOM on ubuntu-latest.
[profile.release-debug]
inherits = "release"
debug = "full"

# No-LTO profile for the GPU CI parity jobs (esp. macos-latest Metal). Those
# jobs build one test executable per `tests/*.rs` across the six `-gpu` crates
# (~129 link targets); under `[profile.release]`'s thin-LTO each of those links
# re-optimizes the whole cubecl/wgpu graph, which dominates the job's wall time
# (the deliberate `timeout-minutes: 40` is exceeded around cvvdp-gpu's 66 test
# files). Test binaries are never shipped, so LTO buys nothing here. `opt-level`
# stays 3 so host-side glue runs at a sane speed; `codegen-units = 256`
# parallelizes codegen; `debug = false` shrinks the link. Use `--profile
# gpu-citest`.
[profile.gpu-citest]
inherits = "release"
lto = false
codegen-units = 256
debug = false

[profile.bench]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1

# zensim 0.2.8 isn't on crates.io yet — pin to the main-branch commit
# that adds `compute_extended_features` (needed by the sweep
# subcommand's --feature-output sidecar). Drop this once 0.2.8 ships.
#
# jxl-encoder 0.3.2 (imazen/jxl-encoder#30 — two OOB index DoS
# fixes in entropy_coding/lz77.rs and vardct/patches.rs) is also
# not on crates.io yet — pinning to the main-branch commit that
# contains the merged fix so sweep workers stop crashing at the
# ~17% rate observed in v08/v09/v11. Drop this patch once 0.3.2
# publishes. Same patch applies transitively to zenjxl, which
# pulls jxl-encoder via Cargo.toml.
#
# 2026-05-18 (EXP-MULTI-CODEC): bumped from cb5d9e4 → 6b8eefc1 to
# pick up W44-1..W44-45 bench-driven RD changes on main. User
# explicitly requested "latest main jxlencoder which has a
# different rd than stored data" so the multi-codec sweep
# re-collects with the post-W44 RD curves rather than reusing
# the pre-W44 cached sidecars.
[patch.crates-io]
# zenpixels / zenpixels-convert: the `ultrahdr-core` sibling (0.6.0, pulled
# by the `zenhdr-corpus` member and zenmetrics-cli's optional `hdr` dep)
# requires `zenpixels-convert ^0.2.15`, which is not yet on crates.io (max
# published is 0.2.14). Optional path-deps are version-resolved even when the
# feature is off, so without this pin the WHOLE workspace fails to resolve
# (`failed to select a version for zenpixels-convert = ^0.2.15`) regardless
# of build flags. Pin both crates to the PUSHED zenpixels origin/main rev
# (e890b671, version 0.2.15) — CI-safe (cargo fetches the rev itself, no
# sibling clone needed), matching the zenjxl-decoder git-rev pattern below.
# Drop these when zenpixels-convert 0.2.15 publishes to crates.io.
zenpixels         = { git = "https://github.com/imazen/zenpixels", rev = "e890b67148ca6e1768594b43f5a6415d160ef81f" }
zenpixels-convert = { git = "https://github.com/imazen/zenpixels", rev = "e890b67148ca6e1768594b43f5a6415d160ef81f" }
# zencodec: crates.io 0.1.25 predates the CategorizedError taxonomy
# (zencodec#103) that zenjxl 0.3.0 and zengif both consume — zenjxl's own
# error.rs references `zencodec::CodecError`, which 0.1.25 renamed to the
# `CodecErrorExt` trait. zenjxl and zengif each carry this SAME patch in
# their own (standalone-build-only) Cargo.toml, but path-dependency
# `[patch]` sections are ignored once pulled into this workspace, so the
# workspace root needs its own copy or it silently falls back to the
# incompatible crates.io release (47 compile errors in zenjxl's error.rs,
# discovered 2026-07-02 rebuilding zenmetrics-cli after a zenjxl sweep
# change). Drop this once zencodec 0.1.26 publishes and zenjxl/zengif bump
# their version requirements.
zencodec = { git = "https://github.com/imazen/zencodec", rev = "fde07d075711ab1f9a02a935f61e1d3cc655c3a3" }
# Local sibling of the canonical zensim repo. The feat/principled-activity
# branch landed on main weeks ago — the previous path-pin to
# ../zensim--principled-activity was carrying a stale checkout that
# would drift behind canonical on every push. Pointing at
# ../zensim/zensim (canonical main) means a `jj git fetch` in the
# zensim repo bubbles up to zenmetrics builds automatically.
#
# Equivalent git ref (use when the sibling checkout is gone):
#   { git = "https://github.com/imazen/zensim", rev = "<commit>" }
zensim = { path = "../zensim/zensim" }
# 2026-05-19: switched codec deps from crates.io + git-rev to local
# sibling worktrees so we always pick up in-flight improvements.
# User confirmed: "jxl encoder local has been improved, verify no
# crates.io codecs are used." These [patch.crates-io] entries
# substitute path deps for any workspace crate that depends on the
# corresponding crates.io version.
#
#   ~/work/zen/zenpng      (0.1.4)
#   ~/work/zen/zenwebp     (0.4.5)
#   ~/work/zen/zenavif     (0.1.6 — git tip; verify before next release)
#   ~/work/zen/zenjxl      (0.2.1 — git tip post 9ac0cd5a)
#   ~/work/zen/jxl-encoder (post 6b8eefc1 + local improvements)
#
# zenjpeg already uses an explicit `path = ../../../zenjpeg/zenjpeg`
# in zenmetrics-cli/Cargo.toml so it's not patched here.
zenpng       = { path = "../zenpng" }
zenwebp      = { path = "../zenwebp" }
# zenavif: the former ../zenavif--main worktree (zenavif main) was
# removed by worktree cleanup; ../zenavif is now the source of truth —
# checked out at zenavif main (31a9b54), which retains `pub mod expert`
# + the `__expert` feature (Cargo.toml:149, src/lib.rs:73). The speed6
# branch that lacked both is no longer the ../zenavif checkout.
zenavif      = { path = "../zenavif" }
# zenrav1e: ../zenavif -> ravif (zenravif 0.2.0, ../ravif/ravif) depends on
# zenrav1e = "0.2.0" BY CRATES.IO VERSION, but only 0.1.4 is published, so a
# fresh resolve fails (`failed to select a version for zenrav1e = ^0.2.0`).
# The local ../zenrav1e IS 0.2.0 — pin it here so the avif chain resolves
# (the "unpublished dep -> patch it in, don't stall" rule). Dev-only: drop
# this when zenrav1e 0.2.0 (and zenravif 0.2.0) publish to crates.io.
# Equivalent git ref when the sibling checkout is gone:
#   { git = "https://github.com/imazen/zenrav1e", rev = "<commit>" }
zenrav1e     = { path = "../zenrav1e" }
# zenavif-serialize: ../ravif/ravif (zenravif 0.2.0) bumped its own
# requirement to `zenavif-serialize = "0.2.0"` (needed for
# `set_gain_map_alt_icc`) — the ravif Cargo.toml comment says as much:
# "supplied by [patch.crates-io] until 0.2.0 publishes". Only 0.1.4 is
# published, so a fresh resolve fails (`failed to select a version for
# zenavif-serialize = ^0.2.0`), which breaks resolution for the ENTIRE
# workspace (not just avif-touching members) because Cargo resolves
# the full dependency graph up front. The local ../zenavif-serialize
# checkout IS 0.2.0 — pin it here so the avif chain resolves (the
# "unpublished dep -> patch it in, don't stall" rule). Dev-only: drop
# this once zenavif-serialize 0.2.0 publishes to crates.io.
# Equivalent git ref when the sibling checkout is gone:
#   { git = "https://github.com/imazen/zenavif-serialize", rev = "<commit>" }
zenavif-serialize = { path = "../zenavif-serialize" }
# zenjxl: the canonical ../zenjxl checkout (now carries the
# AnimationParams/AnimationFrame API for jxl-encoder 0.3.2). The
# former ../zenjxl--main worktree was removed by worktree cleanup;
# ../zenjxl is the source of truth.
zenjxl       = { path = "../zenjxl" }
# zenjxl-decoder: 0.3.10 published 2026-06-11 (the orientation API that
# previously forced a path patch), but zenjxl main moved again the next
# day — b04ca75 (2026-06-12) gates allow_progressive during decode via
# `JxlDecoderOptions::reject_progressive`, which is on the decoder's main
# (966f9c5) but NOT in the published 0.3.10. zenjxl's own workspace
# carries the same patch; cargo patches don't propagate across
# workspaces, so without this entry the zenmetrics workspace resolves
# crates.io 0.3.10 and zenjxl fails to compile (E0609 reject_progressive).
# 2026-06-18: zenjxl main (3ad46e1) advanced again — #14 (c560121) + #15
# (5d33e76) migrated the decoder boundary to whereat `At<Error>` (decode
# returns are `At`-wrapped; zenjxl calls `.map_error()` / `.map_err_at()`).
# The old git-rev pin 0bd33d21 predates the migration, so zenjxl failed to
# compile (E0599 map_err_at/map_error). 2026-06-19: re-pinned from the
# sibling-path-patch hold to a PUSHED decoder rev that carries the At<Error>
# migration — 0599dcf is zenjxl-decoder origin/main (#29 changelog tip), so
# cargo fetches it itself and CI needs no sibling clone (matches the comment
# at the clone step in .github/workflows/ci.yml). Drop this patch when
# zenjxl-decoder 0.3.11 publishes with the At<Error> API AND zenjxl bumps its
# `jxl` dep to that release.
zenjxl-decoder = { git = "https://github.com/imazen/zenjxl-decoder", rev = "0599dcf3728c3982f3cf2cad22beb053037da356" }
jxl-encoder  = { path = "../jxl-encoder/jxl-encoder" }
# butteraugli: the local sibling at ~/work/butteraugli/butteraugli is
# version 0.9.2 but carries `compare_linear_planar_into` (the recycled-
# buffer planar-compare production path) which the PUBLISHED crates.io
# 0.9.2 does NOT expose. jxl-encoder (patched above) calls it from its
# vardct perceptual backend (perceptual_backend.rs:637); without this
# patch the workspace unifies on crates.io 0.9.2 and the jxl-encoder
# build fails `no method compare_linear_planar_into`. This points
# zenmetrics at the SAME local sibling jxl-encoder's own Cargo.toml uses
# (../../butteraugli/butteraugli from each repo root), so the whole
# workspace resolves one butteraugli. Equivalent git ref when the
# sibling checkout is gone: { git = "https://github.com/imazen/butteraugli", rev = "<commit>" }.
butteraugli  = { path = "../../butteraugli/butteraugli" }
# dssim-core: local sibling ~/work/dssim/dssim-core (3.5.0, semver-compatible with the 3.4 request) so
# the dssim score uses local source, not the crates.io artifact ("scores must use local").
dssim-core   = { path = "../../dssim/dssim-core" }
# fast-ssim2: the CPU integrated-PU21 HDR entry
# (`fast_ssim2::compute_ssimulacra2_pu_nits`, behind the `hdr-pu` feature) is
# git-main-only — crates.io 0.8.1 predates it. zenmetrics-api's cpu-ssim2
# routes `hdr_feeding(Ssim2, Backend::Cpu)` through that entry (the u8
# PU-shell front-end capped at ~0.61 UPIQ-class vs 0.7044 integrated, #25),
# so the workspace pins the sibling package dir — the SAME path
# zenmetrics-cli's direct dep already uses (../../../fast-ssim2/fast-ssim2
# from its crate dir), keeping one fast-ssim2 in the graph. CI clones
# imazen/fast-ssim2 at a pinned rev (see .github/workflows/ci.yml).
# Equivalent git ref (use when the sibling checkout is gone):
#   { git = "https://github.com/imazen/fast-ssim2", rev = "8c9b16d2f4ab6055bfa22d8b4a079a8778f285ec" }
# Drop this patch when a fast-ssim2 release ships `hdr-pu` (0.8.2+) and the
# api/orchestrator deps move back to the registry version.
fast-ssim2   = { path = "../fast-ssim2/fast-ssim2" }
# Phase 8f (2026-05-27): cubecl-* deps moved from [patch.crates-io] git
# pins to [workspace.dependencies] package aliases at the top of this
# file. The zenforks-cubecl-* crates.io publication makes the workspace-
# dependency form sufficient; [patch.crates-io] is no longer needed.
