[package]
name = "butteraugli-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the butteraugli perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "fast-reduction"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
hip = ["cubecl/hip"]
cpu = ["cubecl/cpu"]
# Use Atomic<f32>::fetch_add for the per-octave reduction. Works on
# CUDA / Windows DX12 (real driver) / HIP. Silently no-ops on Metal —
# disable when targeting Metal:
#   cargo build -p butteraugli-gpu --no-default-features --features wgpu
fast-reduction = []
# Internals escape hatch (mirrors the CPU `butteraugli` crate's
# `internals` feature). Exposes `compute_with_reference_from_linear_planes`
# — accepts caller-supplied GPU `Handle`s for the distorted side's
# planar linear RGB, skipping the sRGB upload + sRGB→linear convert.
# Used by encoder-side rate-distortion search where the encoder
# already has the reconstructed image as planar linear-RGB GPU planes
# (e.g. jxl-encoder-gpu's recon planes) and wants to avoid the
# recon-download → sRGB-host-convert → re-upload boundary work.
# Off by default; not stable; signature may shift with internal kernel
# refactors.
internals = []

[dependencies]
cubecl = { workspace = true }

[dev-dependencies]
butteraugli = { workspace = true }
bytemuck = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
