[package]
name = "butteraugli-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the butteraugli perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
# Defaults removed `fast-reduction` 2026-05-27 (Phase 8e.4 audit;
# mirrors ssim2-gpu task #52). cubecl-wgpu's Metal backend silently
# no-ops Atomic<f32>::fetch_add (every reduction returns zero, every
# score collapses to the default value). The portable per-thread-
# partials + finalize reduction is deterministic and works on every
# cubecl backend including Metal. Opt back into `fast-reduction` via
# explicit feature flag for CUDA-only deployments where the ~2-3×
# reduction-step speedup matters more than reproducibility. Tracked
# in `crates/zenmetrics-api/docs/CUBECL_METAL_ATOMIC_FIX.md`.
default = ["cuda", "wgpu", "cpu", "pixels"]
# Runtime features imply `cubecl-types` because `memory_mode.rs` and
# `pipeline.rs` reference `crate::strip::*` unconditionally; without
# this implication `cargo check -p butteraugli-gpu --features cuda`
# fails with E0433 "cannot find `strip` in the crate root".
cuda = ["cubecl/cuda", "cubecl-types"]
wgpu = ["cubecl/wgpu", "cubecl-types"]
hip = ["cubecl/hip", "cubecl-types"]
cpu = ["cubecl/cpu", "cubecl-types"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# Exposes the generic typed `Butteraugli<R: Runtime>` API publicly.
# Off by default — opaque `ButteraugliOpaque` is the supported
# surface. See dssim-gpu/Cargo.toml for the full rationale.
cubecl-types = []
# OFF by default since 2026-05-27 (Phase 8e.4 audit). Opt in to use
# `Atomic<f32>::fetch_add` for the per-octave reduction. Verified
# correct on:
#   - CUDA   (NVIDIA, native runtime)
#   - DX12   (Windows wgpu, real NVIDIA / AMD driver)
#   - HIP    (AMD ROCm) — by analogy; uses CUDA-style atomic intrinsics
# Verified BROKEN on:
#   - Metal  (cubecl-wgpu's Metal backend reports Atomic<f32> = LoadStore|Add
#            as supported, but the codegen silently no-ops at execution
#            time — every reduction returns zero and every score
#            collapses to the default value. Root cause + upstream
#            patch: `crates/zenmetrics-api/docs/CUBECL_METAL_ATOMIC_FIX.md`).
#
# Enable for CUDA-only deployments:
#   cargo build -p butteraugli-gpu --no-default-features --features cuda,fast-reduction
fast-reduction = []
# Internals escape hatch (mirrors the CPU `butteraugli` crate's
# `internals` feature). Exposes `compute_with_reference_from_linear_planes`
# — accepts caller-supplied GPU `Handle`s for the distorted side's
# planar linear RGB, skipping the sRGB upload + sRGB→linear convert.
# Used by encoder-side rate-distortion search where the encoder
# already has the reconstructed image as planar linear-RGB GPU planes
# (e.g. jxl-encoder-gpu's recon planes) and wants to avoid the
# recon-download → sRGB-host-convert → re-upload boundary work.
# Off by default; not stable; signature may shift with internal kernel
# refactors.
internals = []

[dependencies]
cubecl = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
butteraugli = { workspace = true }
bytemuck = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }
zenbench = "0.1.8"

# Examples and tests consuming the typed Butteraugli<R> require
# the cubecl-types feature.
[[example]]
name = "batch_parity"
required-features = ["cubecl-types"]

[[example]]
name = "bench_dim_switch"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "bench_warm_ref"
required-features = ["cubecl-types"]

[[example]]
name = "blur_parity"
required-features = ["cubecl-types"]

[[example]]
name = "colors_parity"
required-features = ["cubecl-types"]

[[example]]
name = "diffmap_inspect"
required-features = ["cubecl-types"]

[[example]]
name = "end_to_end"
required-features = ["cubecl-types"]

[[example]]
name = "options_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "parity_real_image"
required-features = ["cubecl-types"]

[[example]]
name = "parity_vs_cpu"
required-features = ["cubecl-types"]

[[example]]
name = "reduction_parity"
required-features = ["cubecl-types"]

[[example]]
name = "strip_parity_numbers"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole_cuda"
required-features = ["cubecl-types", "cuda"]

[[test]]
name = "reduction_parity"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]

[[test]]
name = "strip_parity"
required-features = ["cubecl-types"]

# W44-phase3-B4: parity test for the new set_reference_from_linear_planes
# API. Requires `internals` to access the API + `cuda` to run the GPU
# pipeline (the test asserts host-srgb→linear+upload matches the in-kernel
# srgb→linear conversion on the legacy path).
[[test]]
name = "set_reference_from_linear_planes"
required-features = ["cubecl-types", "internals", "cuda"]
