[package]
name = "cvvdp-cpu"
version = "0.0.1"
description = "Maximally optimized pure-Rust CPU port of ColorVideoVDP (still-image), SIMD via archmage"
license = "AGPL-3.0-or-later"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std", "parallel"]
# Use the standard library — most users want this. With `std` disabled
# the crate falls back to `core + alloc` only, which is what no_std
# wasm32 targets need.
std = []
# Allocator-only build. `alloc` is implied — kept as a feature to
# make intent explicit. no_std + alloc is the minimum target.
alloc = []
# Rayon-backed per-band parallelism. Implies std (rayon requires std).
parallel = ["std", "dep:rayon"]
# `zenpixels` integration smoke (scoring direct from `PixelLayout`).
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]

[dependencies]
# Shared CSF + DKL + masking constants come from cvvdp-gpu — we depend
# directly so a future LUT bump only needs one update site.
cvvdp-gpu = { workspace = true, default-features = false }
rayon = { version = "1.10", optional = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
# Corpus for parity tests (CID22 + screenshots).
zenmetrics-corpus = { workspace = true }
