[package]
name = "cvvdp-cpu"
version = "0.1.0"
description = "Maximally optimized pure-Rust CPU port of ColorVideoVDP (still-image), SIMD via archmage"
license = "AGPL-3.0-or-later"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

# archmage::incant! macro internally checks `cfg(feature = "avx512")`
# even when no AVX-512 tier is used — suppress the unexpected_cfgs
# warning from the macro expansion (matches the zenblend pattern).
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512"))'] }

[features]
default = ["std", "parallel"]
# Use the standard library — most users want this. With `std` disabled
# the crate falls back to `core + alloc` only, which is what no_std
# wasm32 targets need.
std = []
# Allocator-only build. `alloc` is implied — kept as a feature to
# make intent explicit. no_std + alloc is the minimum target.
alloc = []
# Rayon-backed per-band parallelism. Implies std (rayon requires std).
parallel = ["std", "dep:rayon"]
# `zenpixels` integration smoke (scoring direct from `PixelLayout`).
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]

[dependencies]
# Shared CSF + DKL + masking constants come from cvvdp-gpu — we depend
# directly so a future LUT bump only needs one update site.
cvvdp-gpu = { workspace = true, default-features = false }
rayon = { version = "1.10", optional = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
# archmage / magetypes provide token-gated SIMD with vectorized
# transcendentals (`pow_midp_unchecked` ≈ 128 ULP / 1e-5 rel-err).
# Used to vectorize the per-pixel `safe_pow` calls in `masking.rs`;
# `simd_math.rs` exposes `vexp` / `vlog` / `vpow` helpers that the
# next perf chunk (CSF SIMD) can reuse on its own hot path.
archmage = { version = "0.9.23", default-features = false, features = ["macros"] }
magetypes = { version = "0.9.23", default-features = false }

[dev-dependencies]
# Corpus for parity tests (256² source + JPEG-q variants).
zenmetrics-corpus = { workspace = true }
# Used to decode the corpus PNG + JPEGs.
image = { workspace = true, features = ["png", "jpeg"] }
